# StealthKit

./: .gitignore  CMakeLists.txt  Makefile  NSPanel_Fix_Summary.md  NSPanel_Implementation_Guide.md  PLAN.md  Package.swift  README.md  REFACTORING_SUMMARY.md  Toolbar_Fix_Summary.md
Scripts/: build.sh
Sources/SwiftBrowser/: main.swift
Sources/SwiftBrowser/App/: SwiftBrowserApp.swift
Sources/SwiftBrowser/Coordinators/: AppCoordinator.swift  BrowserCoordinator.swift
Sources/SwiftBrowser/Coordinators/Protocols/: CoordinatorProtocol.swift
Sources/SwiftBrowser/Core/Constants/: AnimationConstants.swift  HTMLConstants.swift  UIConstants.swift
Sources/SwiftBrowser/Core/Managers/: TabManager.swift
Sources/SwiftBrowser/Core/Models/: Download.swift  SecuritySettings.swift  Settings.swift  Tab.swift  WindowInfo.swift
Sources/SwiftBrowser/Core/Services/: BrowserFileManager.swift  BrowserStateManager.swift  CookieManager.swift  DownloadManager.swift  DownloadPanelManager.swift  FaviconCache.swift  FileTypeService.swift  HistoryManager.swift  KeyboardShortcutManager.swift  ScreenshotService.swift  StatusBarController.swift  StealthManager.swift  TabService.swift  WindowCloaking.swift  WindowService.swift
Sources/SwiftBrowser/Core/UI/: PanelScene.swift  UIComponents.swift  UITheme.swift  WindowManager.swift
Sources/SwiftBrowser/Resources/: Info.plist
Sources/SwiftBrowser/ViewModels/: BrowserViewModel.swift
Sources/SwiftBrowser/Views/: BrowserView.swift  CookieManagementView.swift  DownloadManagementView.swift  EmptyTabView.swift  FaviconView.swift  HistoryView.swift  SecurityPrivacyView.swift  SettingsViews.swift  SidebarView.swift  TabBarView.swift  UtilityViews.swift  WelcomeView.swift
Sources/SwiftBrowser/Views/Components/: BrowserToolbar.swift  DownloadPopover.swift  ScreenshotPopover.swift  ScreenshotToolbarButton.swift
Sources/SwiftBrowser/WebKit/: WebViewCoordinator.swift
cmake/modules/: CompilerFlags.cmake  WebKitLinking.cmake
new/: Package.swift  README.md
new/.swiftpm/xcode/package.xcworkspace/xcuserdata/me.xcuserdatad/: UserInterfaceState.xcuserstate
new/Sources/SwiftBrowser/App/: SwiftBrowserApp.swift
new/Sources/SwiftBrowser/Core/Models/: Extension.swift  Settings.swift
new/Sources/SwiftBrowser/Core/Services/: KeyboardShortcutManager.swift
new/Sources/SwiftBrowser/Resources/: Entitlements.plist
new/Sources/SwiftBrowser/ViewModels/: BrowserViewModel.swift
new/Sources/SwiftBrowser/Views/: BrowserView.swift  NavigationBarView.swift  SettingsView.swift  TabBarView.swift
new/Sources/SwiftBrowser/WebKit/: WebViewCoordinator.swift
new/SwiftBrowser.app/Contents/MacOS/: SwiftBrowser
old/: CMakeLists.txt
old/cmake/modules/: CompilerFlags.cmake  MacOSBundle.cmake
old/resources/: Entitlements.plist
old/scripts/: build.sh
old/src/Application/: AppDelegate.m  CMakeLists.txt  main.m
old/src/Browser/: BrowserWindow.m  CMakeLists.txt  TabManager.h
old/src/Stealth/: CMakeLists.txt  StealthManager.h  StealthManager.m  WindowCloaking.h
old/src/UI/: CMakeLists.txt  README.md  TabBarView.h  ToolbarView.h  UIManager.h
old/src/Utilities/: CMakeLists.txt  SearchEngineManager.m  ShortcutManager.h  URLHelper.h
resources/: Info.plist.in
resources/icons/: AppIcon.icns
scripts/: build.sh
src/Application/: AppDelegate.h
src/Browser/: BrowserWindow.h  BrowserWindow.m  TabManager.m
src/Stealth/: StatusBarController.h  StatusBarController.m  WindowCloaking.m
src/UI/: AddressBarView.h  AddressBarView.m  TabBarView.m  ToolbarView.m  UIManager.h  UIManager.m
src/Utilities/: SearchEngineManager.h  ShortcutManager.m  URLHelper.m
